Made the list of courses in flex. Turned off shadows on tablets and below. Fix cross-browser height problems. Add IE10+ support

--- a/css/.sass/_util.scss
+++ b/css/.sass/_util.scss
@@ -1,7 +1,7 @@
 // Front-end dev utilities
 //
 // @author HA3IK [Nazar Holubovskyy] <golubha3ik@gmail.com>
-// @version 1.1.0
+// @version 1.1.0-0.3.0
 
 
 @use "sass:math";
@@ -10,9 +10,11 @@
 // px to rem/em etc, with default font-size 16px
 @function px2x($px, $unit: rem, $size: 16, $fract: 4) {
   $result: calc($px / $size);
+
   @if $unit =='%' {
     $result: calc($result * 100);
   }
+
   @return round-fraction($result, $fract)+$unit;
 }
 
@@ -21,4 +23,30 @@
 @function round-fraction($number, $fraction: 4) {
   $fraction: math.pow(10, $fraction);
   @return #{calc(round($number * $fraction) / $fraction)};
+}
+
+
+// ! JUST for current project
+
+// PC to tablet value converter
+@function pc2tab($val) {
+  $delta: 1.46393; // Δ (PC, Tablet)
+  @return calc($val / $delta);
+}
+
+// Content margins
+@mixin content-margin($margin) {
+  .content {
+    margin-left: $margin;
+    margin-right: $margin;
+  }
+}
+
+// Course width for IE
+@mixin ie-course-width($width) {
+
+  .course-list-title,
+  .course {
+    max-width: $width;
+  }
 }
