--- a/css/main.css
+++ b/css/main.css
@@ -150,8 +150,8 @@ main {
  */
 :root,
 body {
+  height: 100%;
   overflow-x: hidden;
-  height: 100vh;
 }
 
 :root {
@@ -182,16 +182,20 @@ body {
 }
 
 .col {
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -ms-flex-direction: column;
+      flex-direction: column;
 }
 
-.col-main {
-  height: 100%;
+.row {
+  -ms-flex: 0 0 auto;
+      flex: 0 0 auto;
 }
 
 .row-stretch {
-  flex: 1;
+  -ms-flex: 1 0 auto;
+      flex: 1 0 auto;
 }
 
 .wrapper {
@@ -216,10 +220,14 @@ body {
 }
 
 .bar {
-  align-items: center;
+  -ms-flex-align: center;
+      align-items: center;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
 }
 
 .logo {
@@ -252,14 +260,18 @@ body {
 }
 
 .intro {
-  align-items: center;
+  -ms-flex-align: center;
+      align-items: center;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
   margin-bottom: 8.375rem;
 }
 
 .intro-verbal {
-  flex: 0 28.75rem;
+  -ms-flex: 0 28.75rem;
+      flex: 0 28.75rem;
   margin-bottom: 1.9375rem;
 }
 
@@ -287,18 +299,33 @@ body {
 }
 
 .intro-visual {
-  flex: 0;
+  -ms-flex: 0 0 auto;
+      flex: 0 0 auto;
   margin: 0 4.8649%;
   position: relative;
 }
 
+.intro-img-attach,
+.intro-img-cover {
+  border-radius: 9.9063rem;
+  width: 19.8125rem;
+}
+
+.intro-img-attach {
+  background: linear-gradient(180deg, #4851FF 0%, #F02AA6 100%);
+  bottom: 0;
+  height: 63rem;
+  left: 0;
+  position: absolute;
+  transform: rotate(45deg) translate(-9.9063rem, -4.2146rem);
+  transform-origin: bottom left;
+}
+
 .intro-img-cover {
   background: linear-gradient(180deg, #ff6f48 0%, #f02aa6 100%);
-  border-radius: 9.9063rem;
   height: 35rem;
   overflow: hidden;
   position: relative;
-  width: 19.8125rem;
 }
 
 .intro-img {
@@ -307,18 +334,6 @@ body {
   position: absolute;
   right: 0;
   width: 110.4101%;
-}
-
-.intro-img-attach {
-  background: linear-gradient(180deg, #4851ff 0%, #f02aa6 100%);
-  border-radius: 9.9063rem;
-  bottom: 0;
-  height: 63rem;
-  left: 0;
-  position: absolute;
-  transform: rotate(45deg) translate(-9.9063rem, -4.2146rem);
-  transform-origin: bottom left;
-  width: 19.8125rem;
 }
 
 .intro-stats {
@@ -360,30 +375,40 @@ body {
 }
 
 .course-list {
-  grid-gap: 5rem 1.875rem;
-  display: grid;
-  gap: 5rem 1.875rem;
-  grid-template-columns: repeat(3, 1fr);
-  margin-bottom: 8.75rem;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  margin-bottom: 3.75rem;
 }
 
+.course-list-title,
 .course {
-  background: #fff;
   border-radius: 0.9375rem;
-  box-shadow: 0 1.5625rem 3.125rem rgba(6, 22, 141, 0.0442381);
-  display: flex;
-  flex-direction: column;
+  -ms-flex: 0 31.5315%;
+      flex: 0 31.5315%;
+  margin-bottom: 5rem;
   padding: 4rem 2rem 2.5rem;
-  position: relative;
 }
 
 .course-list-title {
   background: linear-gradient(180deg, #ff6f48 0%, #f02aa6 100%);
-  box-shadow: none;
   color: #fff;
   font-size: 2rem;
   font-weight: 800;
   line-height: 2.5rem;
+}
+
+.course {
+  background: #fff;
+  box-shadow: 0 1.5625rem 3.125rem rgba(6, 22, 141, 0.0442381);
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  position: relative;
 }
 
 .course-title,
@@ -400,7 +425,8 @@ body {
 }
 
 .course-txt {
-  flex: 1;
+  -ms-flex: 1 0 auto;
+      flex: 1 0 auto;
 }
 
 .course-link {
@@ -417,12 +443,15 @@ body {
 }
 
 .course-icon {
-  align-items: center;
+  -ms-flex-align: center;
+      align-items: center;
   background: linear-gradient(180deg, #ff6f48 0%, #f02aa6 100%);
   border-radius: 50%;
+  display: -ms-flexbox;
   display: flex;
   height: 3.5rem;
-  justify-content: center;
+  -ms-flex-pack: center;
+      justify-content: center;
   position: absolute;
   top: -1.5rem;
   width: 3.5rem;
@@ -447,7 +476,8 @@ body {
 }
 
 .attribution-wrap {
-  flex: 100%;
+  -ms-flex: 100%;
+      flex: 100%;
   padding-top: 2rem;
 }
 
@@ -467,6 +497,9 @@ body {
   cursor: inherit;
 }
 
+/**
+ * Media-queries
+ */
 @media (min-width: 120.625rem) {
   .intro-img-attach {
     height: 80rem;
@@ -484,7 +517,8 @@ body {
     line-height: 1.625;
   }
   .content {
-    margin: 0 5.1433%;
+    margin-left: 5.1433%;
+    margin-right: 5.1433%;
   }
   .bar .btn {
     padding: 0.5625rem 0 0.6875rem;
@@ -500,7 +534,8 @@ body {
     margin-bottom: 10.0438rem;
   }
   .intro-verbal {
-    flex-basis: 24.875rem;
+    -ms-flex-preferred-size: 24.875rem;
+        flex-basis: 24.875rem;
     margin-bottom: 0;
   }
   .intro-title {
@@ -518,14 +553,16 @@ body {
   .intro-visual {
     margin: 0 5.9724% 0 2.9028%;
   }
+  .intro-img-attach,
   .intro-img-cover {
-    height: 23.9082rem;
     width: 13.5338rem;
   }
   .intro-img-attach {
     height: 43.0348rem;
     transform: rotate(45deg) translate(-6.7669rem, -2.879rem);
-    width: 13.5338rem;
+  }
+  .intro-img-cover {
+    height: 23.9082rem;
   }
   .intro-stats {
     border-radius: 0.625rem;
@@ -550,18 +587,22 @@ body {
     width: 6.5625rem;
   }
   .course-list {
-    grid-gap: 3.5rem 0.625rem;
-    gap: 3.5rem 0.625rem;
-    grid-template-columns: repeat(2, 1fr);
-    margin-bottom: 5.375rem;
+    margin-bottom: 1.875rem;
   }
+  .course-list-title,
   .course {
     border-radius: 0.625rem;
+    -ms-flex-preferred-size: 49.2017%;
+        flex-basis: 49.2017%;
+    margin-bottom: 3.5rem;
     padding: 3.5rem 1.3125rem 2rem 2rem;
   }
   .course-list-title {
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+  .course {
+    box-shadow: none;
   }
   .course-title {
     font-size: 1.25rem;
@@ -571,10 +612,14 @@ body {
   .footer {
     padding: 2.25rem 0;
   }
+  .footer .btn {
+    background: linear-gradient(180deg, #4851FF 0%, #F02AA6 100%);
+  }
 }
 @media (max-width: 33.75rem) {
   .content {
-    margin: 0 4.2667%;
+    margin-left: 4.2667%;
+    margin-right: 4.2667%;
   }
   .header {
     margin-bottom: 1.375rem;
@@ -598,11 +643,11 @@ body {
   .intro-visual {
     margin: 0 auto;
   }
-  .intro-img-cover {
-    text-align: center;
-  }
   .intro-img-attach {
     display: none;
+  }
+  .intro-img-cover {
+    text-align: center;
   }
   .intro-img {
     position: relative;
@@ -621,12 +666,13 @@ body {
     display: block;
     margin-bottom: 5rem;
   }
+  .course-list-title,
   .course {
-    padding: 3.5rem 1.8125rem 2rem 1.75rem;
     margin-bottom: 2.5rem;
+    padding: 3.5rem 1.8125rem 2rem 1.75rem;
   }
   .course-list-title {
-    padding: 1.5rem 1.8125rem 2rem 1.75rem;
+    padding-top: 1.5rem;
   }
 }
 @media (max-width: 18.75rem) {
@@ -645,17 +691,19 @@ body {
 }
 @media (max-width: 17.5rem) {
   .content {
-    padding-left: 0 6%;
+    margin-left: 8%;
+    margin-right: 8%;
+  }
+  .bar {
+    -ms-flex-direction: column;
+        flex-direction: column;
+  }
+  .bar .btn {
+    margin-top: 1rem;
   }
   .intro-visual,
   .intro-img-cover {
     width: 100%;
-  }
-  .bar {
-    flex-direction: column;
-  }
-  .bar .btn {
-    margin-top: 1rem;
   }
 }
 @media (max-width: 13.75rem) {
@@ -669,5 +717,31 @@ body {
     position: absolute;
     width: 100%;
     bottom: 0;
+  }
+}
+/**
+ * Quirks mode
+ */
+@media (-ms-high-contrast: none) {
+  .intro-verbal {
+    -ms-flex-negative: 1;
+        flex-shrink: 1;
+    margin-bottom: 1.9375rem;
+  }
+  .course-list-title,
+  .course {
+    max-width: 31.5315%;
+  }
+}
+@media (-ms-high-contrast: none) and (max-width: 53.75rem) {
+  .course-list-title,
+  .course {
+    max-width: 49.2017%;
+  }
+}
+@media (-ms-high-contrast: none) and (max-width: 33.75rem) {
+  .course-list-title,
+  .course {
+    max-width: 100%;
   }
 }
